--- a/app/src/main/res/drawable/spec_btn_select_true.xml
+++ b/app/src/main/res/drawable/spec_btn_select_true.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="rectangle"
        xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/colorPrimary" />
+    <solid android:color="@color/colorPrimaryDark" />
     <corners android:radius="5.0dip" />
     <padding android:left="12.0dip" android:top="8.0dip" android:right="12.0dip" android:bottom="8.0dip" />
 </shape>
