--- a/app/src/main/res/layout/fragment_store_home.xml
+++ b/app/src/main/res/layout/fragment_store_home.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                     xmlns:app="http://schemas.android.com/apk/res-auto"
-                                     android:layout_width="match_parent"
-                                     android:layout_height="match_parent"
-                                     android:orientation="vertical">
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical">
 
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="3dp"
             android:background="@color/bg_white"
             android:orientation="vertical">
@@ -42,13 +42,13 @@
                 android:layout_marginTop="3dp"
                 android:background="@color/bg_white"
                 app:tl_indicator_color="@color/colorPrimaryDark"
+                app:tl_indicator_height="4dp"
                 app:tl_indicator_width_equal_title="true"
                 app:tl_tab_space_equal="true"
                 app:tl_textSelectColor="@color/colorPrimaryDark"
                 app:tl_textUnselectColor="@color/tv_name"
                 app:tl_textsize="@dimen/tv_Normal"
                 app:tl_underline_color="@color/colorLine"
-                app:tl_indicator_height="4dp"
                 app:tl_underline_gravity="BOTTOM"
                 app:tl_underline_height="2px"/>
 
@@ -66,9 +66,9 @@
 
             <TextView
                 style="@style/RegularTextView"
+                android:layout_marginBottom="5dp"
                 android:layout_marginLeft="30px"
                 android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp"
                 android:text="店主推荐"/>
 
             <android.support.v7.widget.RecyclerView
