--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,11 +7,13 @@
     <color name="normal_bg">#f4f4f4</color>
     <color name="bg_white">#ffffff</color>
     <color name="bg_gray">#e6e9ef</color>
+    <color name="flg_gray">#ececed</color>
+    <color name="flg_hint">#c3c3c3</color>
     <color name="btn_gray">#f4f4f4</color>
 
 
-
     <color name="tv_hint">#7c7c7c</color>
+
 
     <color name="tv_name">#444444</color>
     <color name="tv_brand">#000044</color>
